lore-error-set/tests/compile_fail/ffi_derive_missing_attr.rs
// SPDX-FileCopyrightText: 2026 Epic Games, Inc.
// SPDX-License-Identifier: MIT
#[derive(Debug, lore_error_set::FfiError)]
struct BadFfi;

fn main() {}
