lore-error-set/tests/compile_fail/ffi_derive_missing_attr.stderr
error: #[derive(FfiError)] requires #[ffi_code(N)] attribute
 --> tests/compile_fail/ffi_derive_missing_attr.rs:4:8
  |
4 | struct BadFfi;
  |        ^^^^^^
